Use GetAdjustedInsets to compute the insets for remote shell.

This is regression in crrev.com/c/1324092.

TBR=dcastagna@chromium.org

Bug: 906650
Test: Manually tested on slate.
Change-Id: I81c4250afd4e1aa1e588bea104d0225c17d038c1
Reviewed-on: https://chromium-review.googlesource.com/c/1342108
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609341}
Former-commit-id: d5279079529a519cae39e23ff358865fdc8a89e2